--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 		<link rel="stylesheet" href="plugins/animate/animate.css">
 		<link rel="stylesheet" href="plugins/slick/slick.css">
 		<link rel="stylesheet" href="css/style.css">  
+		
+		<link rel="shortcut icon" type="imagex/png" href="images/logo_pequena.png">
 
 	</head>
 
